# libGDSII

./: AUTHORS  COPYRIGHT  INSTALL  Makefile.am  README.md  configure.ac  libGDSII-pkgconfig.in  libGDSII.cc
applications/: DumpGDSIIFile.cc  DumpGDSIIRecords.cc  GDSII2GMSH.cc  GDSIIConvert.cc  Makefile.am
examples/: Makefile.am
examples/bend-flux/: Makefile.am  bend-flux.gds
lib/: Flatten.cc  Makefile.am  ReadGDSIIFile.cc  libGDSII.cc  libGDSII.h
